--- a/_posts/2020-06-15-test.md
+++ b/_posts/2020-06-15-test.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: this a tedt post from 2020
+title: this a test post from 2020
 date: 2020-06-15 01:44:20 +0759
 category: personal
 tags: [test]
